common-applications/test-environment/gitea-repo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-repo-deployment
  namespace: gitea-repo
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gitea-repo
  template:
    metadata:
      labels:
        app: gitea-repo
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - name: gitea-build
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/gitea/gitea-build:6b8591254cd6577c4114dc4140b79453515a6848811a1bfcc52519c6131a4f7a
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /etc/gitea/
          name: data-volume
        - mountPath: /etc/gitea-obs/
          name: obs
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: gitea-repo-data-volume
      - name: obs
        persistentVolumeClaim:
          claimName: pvc-obs-gitea-test
        # volumeMounts:
        # - mountPath: /etc/gitea/app.ini
        #   subPath: config
        #   name: secret
      # volumes:
      # - name: secret
      #   secret:
      #     secretName: gitea-repo-secret
