common-applications/test-environment/gitea-repo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-repo
  namespace: gitea-repo
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: gitea-repo
  type: ClusterIP
