common-applications/test-environment/gitea-repo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx    
  name: gitea-repo-ingress
  namespace: gitea-repo
spec:
  tls:
    - hosts:
      - gitea.test.osinfra.cn
      secretName: gitea-repo-lts
  rules:
    - host: gitea.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: gitea-repo
            servicePort: 3000
          path: /
